--- a/style.css
+++ b/style.css
@@ -25,16 +25,18 @@ body {
   margin: 8px;
 }
 
-a {
+.recipe-image {
   display: block;
   margin: 0 auto;
   padding: 0 auto;
 }
 
 img {
+  display: block;
   width: 400px;
   height: auto;
   margin-left: auto;
   margin-right: auto;
+ 
  
 }
